# CollegeInC

./: .gitignore  CMakeLists.txt  README.md  main.c
class01/: DecimalToBinary.h  DecisionMaking.h  NumberMirror.h  ReadingNumbers.h
class02/: LCM.h  Sort.h
class03/: CalculateE.h  DivisionBy3.h  SetSolver.h  SplitNumbers.h
exams/: AverageChecker.h
projects/: Account.h  FindCharacter.h  Grade.h  Khayyam.h  RootSolver.h  SwapName.h  Tax.h  TimeSolution.h
random/: Extra.h  SquareDrawer.h
